Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,17 +14,14 @@ steps:
   inputs:
     provider: 'azurerm'
     command: 'init'
-    workingDirectory: 'AZURE'
-    backendServiceArm: 'a5e1f313-dcc0-4487-b6b6-ca9a628c4e87'
+    backendServiceArm: 'Azure subscription 1(a5e1f313-dcc0-4487-b6b6-ca9a628c4e87)'
     backendAzureRmResourceGroupName: 'terraform'
     backendAzureRmStorageAccountName: 'ignw'
     backendAzureRmContainerName: 'ignw'
-    backendAzureRmKey: 'tf/terraform.tfstate'
+    backendAzureRmKey: 'tf/terraform.tfstate''
 
 - task: TerraformTaskV1@0
   inputs:
     provider: 'azurerm'
-    command: 'apply -auto-approve'
-    workingDirectory: 'AZURE'
-    environmentServiceNameAzureRM: 'a5e1f313-dcc0-4487-b6b6-ca9a628c4e87'
-
+    command: 'apply'
+    environmentServiceNameAzureRM: 'Azure subscription 1(a5e1f313-dcc0-4487-b6b6-ca9a628c4e87)'
