--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,7 +18,7 @@ steps:
     backendAzureRmResourceGroupName: 'terraform'
     backendAzureRmStorageAccountName: 'ignw'
     backendAzureRmContainerName: 'ignw'
-    backendAzureRmKey: 'tf/terraform.tfstate'
+    backendAzureRmKey: 'terraform.tfstate'
 
 - task: TerraformTaskV1@0
   inputs:
