--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,28 +10,33 @@ trigger:
 #   vmImage: 'ubuntu-latest'
 
 steps:
-# - task: TerraformTaskV1@0
-#   inputs:
-#     provider: 'azurerm'
-#     command: 'init'
-#     backendServiceArm: 'Azure subscription 1(a5e1f313-dcc0-4487-b6b6-ca9a628c4e87)'
-#     backendAzureRmResourceGroupName: 'terraform'
-#     backendAzureRmStorageAccountName: 'ignw'
-#     backendAzureRmContainerName: 'ignw'
-#     backendAzureRmKey: 'terraform.tfstate'
-    
-- task: ArchiveFiles@2
+- task: TerraformTaskV1@0
   inputs:
-    rootFolderOrFile: '$(System.DefaultWorkingDirectory)'
-    includeRootFolder: true
-    archiveType: 'zip'
-    archiveFile: '$(Build.ArtifactStagingDirectory)/costco-ignw.azure.$(Build.BuildId).zip'
-    replaceExistingArchive: true
+    provider: 'azurerm'
+    command: 'init'
+    # backendServiceArm: 'Azure subscription 1(a5e1f313-dcc0-4487-b6b6-ca9a628c4e87)'
+    # backendAzureRmResourceGroupName: 'terraform'
+    # backendAzureRmStorageAccountName: 'ignw'
+    # backendAzureRmContainerName: 'ignw'
+    # backendAzureRmKey: 'terraform.tfstate'
+    
+- task: TerraformTaskV1@0
+  inputs:
+    provider: 'azurerm'
+    command: 'validate'
+
+- task: CopyFiles@2
+  inputs:
+    SourceFolder: '$(System.DefaultWorkingDirectory)'
+    Contents: '**'
+    TargetFolder: '$(Build.ArtifactStagingDirectory)'
+    
 - task: PublishBuildArtifacts@1
   inputs:
     PathtoPublish: '$(Build.ArtifactStagingDirectory)'
-    ArtifactName: 'costco-ignw.azure'
+    ArtifactName: 'costco-ignw.azure.$(Build.BuildId)'
     publishLocation: 'Container'
+
 
 # - task: TerraformTaskV1@0
 #   inputs:
