--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,10 +10,10 @@ trigger:
 #   vmImage: 'ubuntu-latest'
 
 steps:
-- task: TerraformTaskV1@0
-  inputs:
-    provider: 'azurerm'
-    command: 'init'
+# - task: TerraformTaskV1@0
+#   inputs:
+#     provider: 'azurerm'
+#     command: 'init'
     # backendServiceArm: 'Azure subscription 1(a5e1f313-dcc0-4487-b6b6-ca9a628c4e87)'
     # backendAzureRmResourceGroupName: 'terraform'
     # backendAzureRmStorageAccountName: 'ignw'
